// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a SlideGroup with animation enabled 1`] = `
<div
  className="slide-group"
>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
    key="1"
  >
    <CSSTransition
      classNames={
        Object {
          "enter": "enter",
          "enterActive": "enter-active",
          "exit": "exit",
          "exitActive": "exit-active",
        }
      }
      enter={true}
      exit={true}
      key="1"
      onEntered={[Function]}
      onExit={[Function]}
      timeout={300}
    >
      <Slide
        isHidden={false}
      >
        <div
          key="1"
        >
          First
        </div>
      </Slide>
    </CSSTransition>
    <CSSTransition
      classNames={
        Object {
          "enter": "enter",
          "enterActive": "enter-active",
          "exit": "exit",
          "exitActive": "exit-active",
        }
      }
      enter={true}
      exit={true}
      key="2"
      onEntered={[Function]}
      onExit={[Function]}
      timeout={300}
    >
      <Slide
        isHidden={false}
      >
        <div
          key="2"
        >
          Second
        </div>
      </Slide>
    </CSSTransition>
    <CSSTransition
      classNames={
        Object {
          "enter": "enter",
          "enterActive": "enter-active",
          "exit": "exit",
          "exitActive": "exit-active",
        }
      }
      enter={true}
      exit={true}
      key="3"
      onEntered={[Function]}
      onExit={[Function]}
      timeout={300}
    >
      <Slide
        isHidden={false}
      >
        <div
          key="3"
        >
          Third
        </div>
      </Slide>
    </CSSTransition>
  </TransitionGroup>
</div>
`;

exports[`should render a default SlideGroup 1`] = `
<div
  className="slide-group"
>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
    key="1"
  >
    <CSSTransition
      classNames={
        Object {
          "enter": "enter",
          "enterActive": "enter-active",
          "exit": "exit",
          "exitActive": "exit-active",
        }
      }
      enter={false}
      exit={false}
      key="1"
      onEntered={[Function]}
      onExit={[Function]}
      timeout={300}
    >
      <Slide
        isHidden={true}
      >
        <div
          key="1"
        >
          First
        </div>
      </Slide>
    </CSSTransition>
    <CSSTransition
      classNames={
        Object {
          "enter": "enter",
          "enterActive": "enter-active",
          "exit": "exit",
          "exitActive": "exit-active",
        }
      }
      enter={false}
      exit={false}
      key="2"
      onEntered={[Function]}
      onExit={[Function]}
      timeout={300}
    >
      <Slide
        isHidden={true}
      >
        <div
          key="2"
        >
          Second
        </div>
      </Slide>
    </CSSTransition>
    <CSSTransition
      classNames={
        Object {
          "enter": "enter",
          "enterActive": "enter-active",
          "exit": "exit",
          "exitActive": "exit-active",
        }
      }
      enter={false}
      exit={false}
      key="3"
      onEntered={[Function]}
      onExit={[Function]}
      timeout={300}
    >
      <Slide
        isHidden={false}
      >
        <div
          key="3"
        >
          Third
        </div>
      </Slide>
    </CSSTransition>
  </TransitionGroup>
</div>
`;
